[vulkan] Fix build on riscv64
This is necessary to go past
Re-running gn gen first (fuchsia/prebuilt/third_party/gn/linux-x64/gn changed)
ERROR at //src/lib/vulkan/BUILD.gn:108:9: Assertion failed.
        assert(false, "Unknown CPU type: %target_cpu")
        ^-----
Unknown CPU type: %target_cpu
See //sdk/BUILD.gn:298:5: which caused the file to be included.
    "//src/lib/vulkan:vulkan_layers",
    ^-------------------------------

Change-Id: I273fd122bb8434d5e85812904207fb3cbb9c30f8

--- a/src/lib/vulkan/BUILD.gn
+++ b/src/lib/vulkan/BUILD.gn
@@ -197,6 +197,8 @@ sdk_atom("vulkan_layers") {
         binaries.arm64 = _sdk_binaries
       } else if (target_cpu == "x64") {
         binaries.x64 = _sdk_binaries
+      } else if (target_cpu == "riscv64") {
+        binaries.riscv64 = _sdk_binaries
       } else {
         assert(false, "Unknown CPU type: %target_cpu")
       }
