[build] Generate sysroot.meta.in.json on riscv64
This allows to go past
Re-running gn gen first (fuchsia/prebuilt/third_party/gn/linux-x64/gn changed)
ERROR at //zircon/public/sysroot/BUILD.gn:119:18: Assertion failed.
                 assert(false, "Unknown CPU type: $target_cpu")
                 ^-----
Unknown CPU type: riscv64
See //sdk/BUILD.gn:69:12: which caused the file to be included.
  deps = [ "//zircon/public/sysroot:sysroot_sdk" ]
           ^------------------------------------

Change-Id: Ib7ed9a43328c2ddb83aeeacf038e9ca8febb0279

--- a/zircon/public/sysroot/sdk/BUILD.gn
+++ b/zircon/public/sysroot/sdk/BUILD.gn
@@ -105,6 +105,8 @@ generated_file("sysroot-meta-json") {
         arm64 = version_content
       } else if (target_cpu == "x64") {
         x64 = version_content
+      } else if (target_cpu == "riscv64") {
+        riscv64 = version_content
       } else {
         assert(false, "Unknown CPU type: $target_cpu")
       }
