[debug_agent] Allow to compile on riscv64
This is necessary to go past
ERROR at //src/developer/debug/debug_agent/BUILD.gn:96:5: Assertion failed.
    assert(false, "Un-supported CPU: ${current_cpu}")
    ^-----
Un-supported CPU: riscv64
See //garnet/packages/prod/BUILD.gn:204:19: which caused the file to be included.
  public_deps = [ "//src/developer/debug/debug_agent" ]
                  ^----------------------------------

Change-Id: Id8bfcbbd8538059bff39359cf71d1e77373ef39e

--- a/src/developer/debug/debug_agent/BUILD.gn
+++ b/src/developer/debug/debug_agent/BUILD.gn
@@ -98,6 +98,7 @@ static_library("lib") {
       "arch_arm64.cc",
       "debug_registers_arm64.cc",
     ]
+  } else if (current_cpu == "riscv64") {
   } else {
     assert(false, "Un-supported CPU: ${current_cpu}")
   }
@@ -250,6 +251,7 @@ test("unit_tests") {
       "arch_arm64_unittest.cc",
       "debug_registers_arm64_unittest.cc",
     ]
+  } else if (current_cpu == "riscv64") {
   } else {
     assert(false, "Un-supported CPU: ${current_cpu}")
   }
