[wip] WIP on wrapping AES-256-XTS for Rust with cxx
Change-Id: Iad41c36b326979d13422fec3a0e129eefcacc8cf

--- a/src/lib/fuchsia-cxx/rust_cxx_ffi_library.gni
+++ b/src/lib/fuchsia-cxx/rust_cxx_ffi_library.gni
@@ -180,9 +180,10 @@ template("rust_cxx_ffi_library") {
     deps = generation_targets + rust_deps
   }
 
+  crate_name = string_replace(package_name, "-", "_")
   generated_file(generated_rs_target) {
     outputs = [ "$source_gen_dir/staticlib_source_root.rs" ]
-    contents = "pub use " + package_name + "::*;"
+    contents = "pub use " + crate_name + "::*;"
   }
 
   # Create a staticlib from the rustc_library above. This uses a generated source_root that just
