--- a/src/lib/fuchsia-cxx/BUILD.gn
+++ b/src/lib/fuchsia-cxx/BUILD.gn
@@ -14,7 +14,9 @@ source_set("cxx_lib") {
   # It is recommended that you read https://docs.rs/cxx first to understand how cxx works, and to
   # understand what cxx does (and does not) do. All C++ code is still "unsafe" from the Rust
   # perspective; cxx just helps with building the Rust side of the FFI layer safely.
-  visibility = []
+  visibility = [
+    "//src/security/fcrypto-rust",
+  ]
 
   cxx_crate = "//third_party/rust_crates/vendor/cxx"
   sources = [
