[wlan] Use the same Ssid and MacAddr aliases in wlan FIDL definitions
All wlan FIDL definitions now use the fuchsia.wlan.ieee80211.Ssid
and fuchsia.wlan.ieee80211.MacAddr aliases where appropriate.

Fixed: 73049
Test: None required. Pure refactor.
Change-Id: Ib54489df33cca4173d451c49a5663c771a1b6edb

--- a/sdk/banjo/fuchsia.hardware.wlan.info/BUILD.gn
+++ b/sdk/banjo/fuchsia.hardware.wlan.info/BUILD.gn
@@ -9,5 +9,6 @@ fidl("fuchsia.hardware.wlan.info") {
   public_deps = [
     "//sdk/banjo/ddk.hw.wlan.ieee80211",
     "//sdk/fidl/fuchsia.wlan.common",
+    "//sdk/fidl/fuchsia.wlan.ieee80211",
   ]
 }
