--- a/sdk/banjo/fuchsia.hardware.wlanphyimpl/BUILD.gn
+++ b/sdk/banjo/fuchsia.hardware.wlanphyimpl/BUILD.gn
@@ -8,7 +8,7 @@ fidl("fuchsia.hardware.wlanphyimpl") {
   sources = [ "wlanphy-impl.fidl" ]
   public_deps = [
     "//sdk/banjo/ddk.hw.wlan.wlaninfo",
-    "//sdk/banjo/fuchsia.hardware.ethernet.mac",
+    "//sdk/fidl/fuchsia.wlan.ieee80211",
     "//zircon/vdso/zx",
   ]
 }
