--- a/sdk/fidl/fuchsia.wlan.device.service/BUILD.gn
+++ b/sdk/fidl/fuchsia.wlan.device.service/BUILD.gn
@@ -18,6 +18,7 @@ fidl("fuchsia.wlan.device.service") {
   public_deps = [
     "//sdk/fidl/fuchsia.wlan.common",
     "//sdk/fidl/fuchsia.wlan.device",
+    "//sdk/fidl/fuchsia.wlan.ieee80211",
     "//sdk/fidl/fuchsia.wlan.minstrel",
     "//sdk/fidl/fuchsia.wlan.mlme",
     "//sdk/fidl/fuchsia.wlan.sme",
