--- a/sdk/fidl/fuchsia.wlan.internal/BUILD.gn
+++ b/sdk/fidl/fuchsia.wlan.internal/BUILD.gn
@@ -9,5 +9,8 @@ fidl("fuchsia.wlan.internal") {
 
   sources = [ "wlan_internal.fidl" ]
 
-  public_deps = [ "//sdk/fidl/fuchsia.wlan.common" ]
+  public_deps = [
+    "//sdk/fidl/fuchsia.wlan.common",
+    "//sdk/fidl/fuchsia.wlan.ieee80211",
+  ]
 }
