--- a/sdk/fidl/fuchsia.wlan.minstrel/BUILD.gn
+++ b/sdk/fidl/fuchsia.wlan.minstrel/BUILD.gn
@@ -14,4 +14,6 @@ fidl("fuchsia.wlan.minstrel") {
   sdk_category = "partner"
 
   sources = [ "wlan_minstrel.fidl" ]
+
+  public_deps = [ "//sdk/fidl/fuchsia.wlan.ieee80211" ]
 }
