[wlan] Create ieee80211::Ssid for use everywhere
The new crate ieee80211 defines a newtype Ssid which wraps a
Box<[u8]>. This type is substituted in the wlan_common crate and
wherever else it affects.

Other components like wlanstack and wlancfg are minimally affected by
this change but will adopt the new Ssid in a later change.

Bug: 82821
Test: fx test //src/connectivity/wlan
Change-Id: I2dbfbf59668aa793a0597b9118028eebe798221d

--- a/src/connectivity/wlan/BUILD.gn
+++ b/src/connectivity/wlan/BUILD.gn
@@ -55,6 +55,7 @@ group("tests") {
     "lib/common/rust:wlan-common-tests",
     "lib/eapol:eapol-tests",
     "lib/frame_writer:wlan-frame-writer-tests",
+    "lib/ieee80211:ieee80211-tests",
     "lib/inspect:wlan-inspect-tests",
     "lib/mlme/cpp/tests",
     "lib/mlme/rust:wlan-mlme-tests",
