--- a/src/connectivity/wlan/testing/hw-sim/test/reconnect_to_wpa2_network/BUILD.gn
+++ b/src/connectivity/wlan/testing/hw-sim/test/reconnect_to_wpa2_network/BUILD.gn
@@ -13,6 +13,7 @@ rustc_test("reconnect_to_wpa2_network") {
     "//src/connectivity/wlan/lib/common/rust:wlan-common",
     "//src/connectivity/wlan/lib/eapol",
     "//src/connectivity/wlan/lib/frame_writer:wlan-frame-writer",
+    "//src/connectivity/wlan/lib/ieee80211",
     "//src/connectivity/wlan/lib/rsn:wlan-rsn",
     "//src/connectivity/wlan/testing/hw-sim:wlan-hw-sim",
     "//src/lib/fuchsia-async",
