--- a/src/connectivity/wlan/testing/hw-sim/test/verify_wlan_inspect/BUILD.gn
+++ b/src/connectivity/wlan/testing/hw-sim/test/verify_wlan_inspect/BUILD.gn
@@ -11,6 +11,7 @@ rustc_test("verify_wlan_inspect") {
     "//sdk/fidl/fuchsia.wlan.policy:fuchsia.wlan.policy-rustc",
     "//sdk/fidl/fuchsia.wlan.tap:fuchsia.wlan.tap-rustc",
     "//src/connectivity/wlan/lib/common/rust:wlan-common",
+    "//src/connectivity/wlan/lib/ieee80211",
     "//src/connectivity/wlan/testing/hw-sim:wlan-hw-sim",
     "//src/diagnostics/lib/selectors",
     "//src/lib/diagnostics/hierarchy/rust",
