--- a/src/connectivity/wlan/tools/wlantool/BUILD.gn
+++ b/src/connectivity/wlan/tools/wlantool/BUILD.gn
@@ -20,6 +20,7 @@ rustc_binary("bin") {
     "//sdk/fidl/fuchsia.wlan.sme:fuchsia.wlan.sme-rustc",
     "//sdk/fidl/fuchsia.wlan.stats:fuchsia.wlan.stats-rustc",
     "//src/connectivity/wlan/lib/common/rust:wlan-common",
+    "//src/connectivity/wlan/lib/ieee80211",
     "//src/connectivity/wlan/lib/rsn:wlan-rsn",
     "//src/lib/fidl/rust/fidl",
     "//src/lib/fuchsia-async",
