--- a/src/connectivity/wlan/lib/rsn/BUILD.gn
+++ b/src/connectivity/wlan/lib/rsn/BUILD.gn
@@ -1,4 +1,4 @@
-# Copyright 2018 The Fuchsia Authors. All rights reserved.
+# Copyright 2021 The Fuchsia Authors. All rights reserved.
 # Use of this source code is governed by a BSD-style license that can be
 # found in the LICENSE file.
 
@@ -16,6 +16,7 @@ rustc_library("wlan-rsn") {
     "//sdk/fidl/fuchsia.wlan.mlme:fuchsia.wlan.mlme-rustc",
     "//src/connectivity/wlan/lib/common/rust:wlan-common",
     "//src/connectivity/wlan/lib/eapol",
+    "//src/connectivity/wlan/lib/ieee80211",
     "//src/connectivity/wlan/lib/sae:wlan-sae",
     "//src/connectivity/wlan/lib/statemachine:wlan-statemachine",
     "//src/lib/mundane",
