--- a/src/connectivity/wlan/lib/sme/BUILD.gn
+++ b/src/connectivity/wlan/lib/sme/BUILD.gn
@@ -20,6 +20,7 @@ rustc_library("wlan-sme") {
     "//sdk/fidl/fuchsia.wlan.sme:fuchsia.wlan.sme-rustc",
     "//src/connectivity/wlan/lib/common/rust:wlan-common",
     "//src/connectivity/wlan/lib/eapol",
+    "//src/connectivity/wlan/lib/ieee80211",
     "//src/connectivity/wlan/lib/inspect:wlan-inspect",
     "//src/connectivity/wlan/lib/rsn:wlan-rsn",
     "//src/connectivity/wlan/lib/sae:wlan-sae",
@@ -36,6 +37,7 @@ rustc_library("wlan-sme") {
     "//third_party/rust_crates:derivative",
     "//third_party/rust_crates:futures",
     "//third_party/rust_crates:itertools",
+    "//third_party/rust_crates:lazy_static",
     "//third_party/rust_crates:log",
     "//third_party/rust_crates:maplit",
     "//third_party/rust_crates:nom",
