--- a/src/connectivity/wlan/lib/stash/BUILD.gn
+++ b/src/connectivity/wlan/lib/stash/BUILD.gn
@@ -14,6 +14,7 @@ rustc_library("wlan-stash") {
   deps = [
     ":wlan-stash-constants",
     "//sdk/fidl/fuchsia.stash:fuchsia.stash-rustc",
+    "//src/connectivity/wlan/lib/ieee80211",
     "//src/lib/fidl/rust/fidl",
     "//src/lib/fuchsia-async",
     "//src/lib/fuchsia-component",
