--- a/src/connectivity/wlan/testing/hw-sim/BUILD.gn
+++ b/src/connectivity/wlan/testing/hw-sim/BUILD.gn
@@ -27,6 +27,7 @@ rustc_library("wlan-hw-sim") {
     "//src/connectivity/wlan/lib/common/rust:wlan-common",
     "//src/connectivity/wlan/lib/eapol",
     "//src/connectivity/wlan/lib/frame_writer:wlan-frame-writer",
+    "//src/connectivity/wlan/lib/ieee80211",
     "//src/connectivity/wlan/lib/isolated-devmgr",
     "//src/connectivity/wlan/lib/rsn:wlan-rsn",
     "//src/connectivity/wlan/lib/wlan_dev",
@@ -46,6 +47,7 @@ rustc_library("wlan-hw-sim") {
     "//third_party/rust_crates:bitfield",
     "//third_party/rust_crates:byteorder",
     "//third_party/rust_crates:futures",
+    "//third_party/rust_crates:lazy_static",
     "//third_party/rust_crates:log",
     "//third_party/rust_crates:pin-utils",
     "//third_party/rust_crates:thiserror",
