--- a/src/connectivity/wlan/testing/hw-sim/test/handle_tx_event_hooks/BUILD.gn
+++ b/src/connectivity/wlan/testing/hw-sim/test/handle_tx_event_hooks/BUILD.gn
@@ -10,6 +10,7 @@ rustc_test("handle_tx_event_hooks") {
     "//sdk/fidl/fuchsia.wlan.policy:fuchsia.wlan.policy-rustc",
     "//sdk/fidl/fuchsia.wlan.tap:fuchsia.wlan.tap-rustc",
     "//src/connectivity/wlan/lib/common/rust:wlan-common",
+    "//src/connectivity/wlan/lib/ieee80211",
     "//src/connectivity/wlan/lib/rsn:wlan-rsn",
     "//src/connectivity/wlan/testing/hw-sim:wlan-hw-sim",
     "//src/lib/fuchsia-async",
