--- a/src/connectivity/wlan/testing/wlan-service-util/BUILD.gn
+++ b/src/connectivity/wlan/testing/wlan-service-util/BUILD.gn
@@ -16,6 +16,7 @@ rustc_library("wlan-service-util") {
     "//sdk/fidl/fuchsia.wlan.internal:fuchsia.wlan.internal-rustc",
     "//sdk/fidl/fuchsia.wlan.sme:fuchsia.wlan.sme-rustc",
     "//src/connectivity/wlan/lib/common/rust:wlan-common",
+    "//src/connectivity/wlan/lib/ieee80211",
     "//src/lib/fidl/rust/fidl",
     "//src/lib/fuchsia-async",
     "//src/lib/syslog/rust:syslog",
