[wlan] Modify CreateIfaceRequest to use ieee80211.MacAddr
The fuchsia.wlan.device/CreateIfaceRequest and
fuchsia.wlan.device.service/CreateIfaceRequest no longer support an
opitonal value for init_mac_addr and mac_addr respectively. Instead
an all zero MAC address should be specified in place of None.

Test: fx test //src/wlan/connectivity
Change-Id: I2b75906872c49a03d4e8132a0e2dabb39b44050a

--- a/src/connectivity/wlan/drivers/testing/util/BUILD.gn
+++ b/src/connectivity/wlan/drivers/testing/util/BUILD.gn
@@ -13,6 +13,7 @@ rustc_binary("util") {
     "//sdk/fidl/fuchsia.device:fuchsia.device-rustc",
     "//sdk/fidl/fuchsia.device.test:fuchsia.device.test-rustc",
     "//sdk/fidl/fuchsia.wlan.device:fuchsia.wlan.device-rustc",
+    "//src/connectivity/wlan/lib/ieee80211",
     "//src/connectivity/wlan/lib/wlan_dev",
     "//src/lib/fdio/rust:fdio",
     "//src/lib/fidl/rust/fidl",
