--- a/src/connectivity/wlan/testing/hw-sim/test/multi_ifaces/BUILD.gn
+++ b/src/connectivity/wlan/testing/hw-sim/test/multi_ifaces/BUILD.gn
@@ -10,6 +10,7 @@ rustc_test("multi_ifaces") {
     "//sdk/fidl/fuchsia.wlan.device:fuchsia.wlan.device-rustc",
     "//sdk/fidl/fuchsia.wlan.device.service:fuchsia.wlan.device.service-rustc",
     "//src/connectivity/wlan/lib/common/rust:wlan-common",
+    "//src/connectivity/wlan/lib/ieee80211",
     "//src/connectivity/wlan/testing/hw-sim:wlan-hw-sim",
     "//src/lib/fuchsia-async",
     "//src/lib/fuchsia-component",
