--- a/src/connectivity/wlan/wlandevicemonitor/BUILD.gn
+++ b/src/connectivity/wlan/wlandevicemonitor/BUILD.gn
@@ -42,6 +42,7 @@ wlandevicemonitor_deps = [
   "//sdk/fidl/fuchsia.wlan.mlme:fuchsia.wlan.mlme-rustc",
   "//sdk/fidl/fuchsia.wlan.tap:fuchsia.wlan.tap-rustc",
   "//src/connectivity/wlan/lib/common/rust/:wlan-common",
+  "//src/connectivity/wlan/lib/ieee80211",
   "//src/connectivity/wlan/lib/isolated-devmgr",
   "//src/connectivity/wlan/lib/wlan_dev",
   "//src/lib/diagnostics/inspect/contrib/rust",
