--- a/sdk/fidl/fuchsia.wlan.device/BUILD.gn
+++ b/sdk/fidl/fuchsia.wlan.device/BUILD.gn
@@ -12,6 +12,7 @@ fidl("fuchsia.wlan.device") {
 
   public_deps = [
     "//sdk/fidl/fuchsia.wlan.common",
+    "//sdk/fidl/fuchsia.wlan.ieee80211",
     "//sdk/fidl/fuchsia.wlan.internal",
     "//zircon/vdso/zx",
   ]
