[wlan] Use Ssid in wlan-service-util
Change-Id: Id03e8e7894249601001b039ddac45dad01b40153

--- a/src/connectivity/wlan/testing/client-smoke-test/BUILD.gn
+++ b/src/connectivity/wlan/testing/client-smoke-test/BUILD.gn
@@ -21,6 +21,7 @@ rustc_binary("bin") {
     "//sdk/fidl/fuchsia.wlan.sme:fuchsia.wlan.sme-rustc",
     "//src/connectivity/lib/net-types",
     "//src/connectivity/wlan/lib/common/rust:wlan-common",
+    "//src/connectivity/wlan/lib/ieee80211",
     "//src/connectivity/wlan/testing/wlan-service-util",
     "//src/lib/fidl/rust/fidl",
     "//src/lib/fuchsia-async",
