--- a/src/testing/sl4f/BUILD.gn
+++ b/src/testing/sl4f/BUILD.gn
@@ -98,6 +98,7 @@ rustc_library("lib") {
     "//src/connectivity/bluetooth/testing/test-call-manager",
     "//src/connectivity/lowpan/lib/lowpan_driver_common",
     "//src/connectivity/lowpan/tools/lowpanctl",
+    "//src/connectivity/wlan/lib/ieee80211",
     "//src/connectivity/wlan/testing/wlan-service-util",
     "//src/lib/async-utils",
     "//src/lib/diagnostics/reader/rust",
