--- a/src/connectivity/wlan/lib/common/rust/BUILD.gn
+++ b/src/connectivity/wlan/lib/common/rust/BUILD.gn
@@ -39,6 +39,7 @@ rustc_library("wlan-common") {
     "//third_party/rust_crates:num-derive",
     "//third_party/rust_crates:num-traits",
     "//third_party/rust_crates:paste",
+    "//third_party/rust_crates:rand",
     "//third_party/rust_crates:static_assertions",
     "//third_party/rust_crates:thiserror",
   ]
