[wlan] Reduce ScanResult footprint
Change-Id: Ia143ae6f40a547d01d557fea22a582e712b5a401

--- a/src/connectivity/wlan/lib/common/rust/BUILD.gn
+++ b/src/connectivity/wlan/lib/common/rust/BUILD.gn
@@ -100,6 +100,7 @@ rustc_library("wlan-common") {
     "src/mac/mod.rs",
     "src/mgmt_writer.rs",
     "src/organization.rs",
+    "src/scan.rs",
     "src/sequence.rs",
     "src/stats/mod.rs",
     "src/stats/signal.rs",
