[wlan] Replace BssDescription time fields with ScanResult timestamp_nanos
Change-Id: I7b9f718ca59eed2bcee98d9fd737b1f35de32122

--- a/sdk/fidl/fuchsia.wlan.mlme/BUILD.gn
+++ b/sdk/fidl/fuchsia.wlan.mlme/BUILD.gn
@@ -27,5 +27,6 @@ fidl("fuchsia.wlan.mlme") {
     "//sdk/fidl/fuchsia.wlan.mesh",
     "//sdk/fidl/fuchsia.wlan.minstrel",
     "//sdk/fidl/fuchsia.wlan.stats",
+    "//zircon/vdso/zx",
   ]
 }
