[wlan] Use the same Bssid everywhere
Change-Id: Ib5e2d28a45be4131418766fccb37fc1aa93eab44

--- a/src/connectivity/wlan/lib/frame_writer/BUILD.gn
+++ b/src/connectivity/wlan/lib/frame_writer/BUILD.gn
@@ -16,6 +16,7 @@ rustc_library("wlan-frame-writer") {
     "//sdk/fidl/fuchsia.wlan.ieee80211:fuchsia.wlan.ieee80211-rustc",
     "//src/connectivity/wlan/lib/common/rust:wlan-common",
     "//src/connectivity/wlan/lib/frame_writer/macro:wlan-frame-writer-macro",
+    "//src/connectivity/wlan/lib/ieee80211",
     "//src/lib/zerocopy",
     "//third_party/rust_crates:proc-macro-hack",
     "//third_party/rust_crates:thiserror",
