--- a/src/connectivity/wlan/lib/mlme/rust/c-binding/BUILD.gn
+++ b/src/connectivity/wlan/lib/mlme/rust/c-binding/BUILD.gn
@@ -17,6 +17,7 @@ rustc_staticlib("wlan-mlme-c") {
     "//sdk/fidl/fuchsia.wlan.internal:fuchsia.wlan.internal_banjo_rust",
     "//sdk/fidl/fuchsia.wlan.mlme:fuchsia.wlan.mlme-rustc",
     "//src/connectivity/wlan/lib/common/rust:wlan-common",
+    "//src/connectivity/wlan/lib/ieee80211",
     "//src/connectivity/wlan/lib/mlme/rust:wlan-mlme",
     "//src/connectivity/wlan/lib/span:wlan-span",
     "//src/lib/fidl/rust/fidl",
