[wlan] Use Ssid newtype throughout wlancfg
The only places where the Ssid newtype are not use are in code
sections requiring the persistent storage of an SSID elsewhere,
e.g. the stash.

Test: fx test //src/connectivity/wlan
Change-Id: I5ae343599ff6284483762ce8e76096b37bfa479a

--- a/src/connectivity/wlan/wlancfg/BUILD.gn
+++ b/src/connectivity/wlan/wlancfg/BUILD.gn
@@ -78,6 +78,8 @@ rustc_library("lib") {
     "//third_party/rust_crates:void",
   ]
 
+  test_deps = [ "//third_party/rust_crates:lazy_static" ]
+
   sources = [
     "src/access_point/mod.rs",
     "src/access_point/state_machine.rs",
