--- a/src/connectivity/wlan/lib/ieee80211/BUILD.gn
+++ b/src/connectivity/wlan/lib/ieee80211/BUILD.gn
@@ -12,6 +12,7 @@ rustc_library("ieee80211") {
 
   deps = [
     "//src/lib/zerocopy",
+    "//third_party/rust_crates:arbitrary",
     "//third_party/rust_crates:hex",
   ]
 
