WIP [fuchsia-async] use the tokio runtime
Change-Id: Ic049862abf17be06373b8a1a36fb9d1acd29c1c8

--- a/src/lib/fuchsia-async/BUILD.gn
+++ b/src/lib/fuchsia-async/BUILD.gn
@@ -74,12 +74,11 @@ rustc_library("fuchsia-async") {
     if (current_toolchain != unknown_wasm32_toolchain) {
       deps += [
         "//third_party/rust_crates:async-channel",
-        "//third_party/rust_crates:async-executor",
         "//third_party/rust_crates:async-io",
         "//third_party/rust_crates:async-net",
         "//third_party/rust_crates:blocking",
-        "//third_party/rust_crates:easy-parallel",
         "//third_party/rust_crates:futures-lite",
+        "//third_party/rust_crates:tokio",
       ]
       sources += [ "src/net/portable/udp.rs" ]
     }
