Revert "[rust] Use -Ccodegen-units=1 instead of ThinLTO for size optimizations"
This reverts commit 6e3243b9e5e17507f38664a40fce9d8773b29ee9.

Reason for revert: https://chat.google.com/room/AAAABFiUm4o/YwzxPDR2-bA

Original change's description:
> [rust] Use -Ccodegen-units=1 instead of ThinLTO for size optimizations
>
> See also: https://bugs.fuchsia.dev/p/fuchsia/issues/detail?id=80514#c16
>
> Bug: 74435
> Fixed: 72934
> Fixed: 80514
> Bug: 74628
> Fixed: 64097
> Big: 83131
> Change-Id: Ibccd0a4f92adb4bb3236ca530c89b2bae85be009
> Reviewed-on: https://fuchsia-review.googlesource.com/c/fuchsia/+/570385
> Fuchsia-Auto-Submit: Shai Barack <shayba@google.com>
> Commit-Queue: Shai Barack <shayba@google.com>
> Reviewed-by: Tyler Mandry <tmandry@google.com>
> Reviewed-by: Abdulla Kamar <abdulla@google.com>
> Reviewed-by: Jay Zhuang <jayzhuang@google.com>
> Reviewed-by: Christopher Johnson <crjohns@google.com>

Bug: 83205
Bug: 74435
Bug: 74628
Change-Id: Ia814430c438c8b43e639292bf446b25625789bcd
No-Tree-Checks: true
Exempt-From-Owner-Approval: true
Reviewed-on: https://fuchsia-review.googlesource.com/c/fuchsia/+/572481
Reviewed-by: Amanda Tait <atait@google.com>
Reviewed-by: Shai Barack <shayba@google.com>

--- a/src/sys/base-resolver/BUILD.gn
+++ b/src/sys/base-resolver/BUILD.gn
@@ -42,9 +42,12 @@ base_resolver_deps = [
 rustc_binary("bin") {
   output_name = "base_resolver"
 
-  configs += [ "//build/config/rust:bootfs" ]
-
-  # Can't dynamically link libstd and libtest for ZBI binaries
+  # base-resolver must always be small (even in debug builds) since it is part of the
+  # Zircon boot image.
+  force_opt = "z"
+  configs += [ "//build/config/lto:thinlto" ]
+  configs -= [ "//build/config/lto:thinlto" ]
+  configs += [ "//build/config/lto:thinlto" ]
   configs -= [ "//build/config/fuchsia:dynamic_rust_standard_library" ]
 
   deps = base_resolver_deps
