--- a/src/power/power-manager/BUILD.gn
+++ b/src/power/power-manager/BUILD.gn
@@ -23,11 +23,19 @@ metrics_registry("power_manager_metrics") {
 rustc_binary("bin") {
   name = "power_manager"
   edition = "2018"
+  force_opt = "z"
   with_unit_tests = true
 
-  configs += [ "//build/config/rust:bootfs" ]
+  # TODO(fxbug.dev/64097): extract to a template
+  # power_manager must always be small (even in debug builds) since it is part of bootfs.
+  #
+  # The add/remove/add ensures we get the configuration without producing errors for builds which
+  # enable ThinLTO themselves.
+  configs += [ "//build/config/lto:thinlto" ]
+  configs -= [ "//build/config/lto:thinlto" ]
+  configs += [ "//build/config/lto:thinlto" ]
 
-  # Can't dynamically link libstd and libtest for ZBI binaries
+  # we can't dynamically link std when we're in the zbi
   configs -= [ "//build/config/fuchsia:dynamic_rust_standard_library" ]
 
   deps = [
