--- a/src/storage/flashmap/BUILD.gn
+++ b/src/storage/flashmap/BUILD.gn
@@ -14,11 +14,19 @@ group("tests") {
 
 rustc_binary("bin") {
   output_name = "flashmap"
+  force_opt = "z"
   with_unit_tests = true
 
-  configs += [ "//build/config/rust:bootfs" ]
+  # TODO(fxbug.dev/64097): extract to a template
+  # power_manager must always be small (even in debug builds) since it is part of bootfs.
+  #
+  # The add/remove/add ensures we get the configuration without producing errors for builds which
+  # enable ThinLTO themselves.
+  configs += [ "//build/config/lto:thinlto" ]
+  configs -= [ "//build/config/lto:thinlto" ]
+  configs += [ "//build/config/lto:thinlto" ]
 
-  # Can't dynamically link libstd and libtest for ZBI binaries
+  # we can't dynamically link std when we're in the zbi
   configs -= [ "//build/config/fuchsia:dynamic_rust_standard_library" ]
 
   deps = [
