--- a/src/developer/debug/zxdb/client/BUILD.gn
+++ b/src/developer/debug/zxdb/client/BUILD.gn
@@ -164,7 +164,7 @@ static_library("client") {
     "//third_party/crashpad/client",
     "//third_party/crashpad/compat",
     "//third_party/crashpad/snapshot",
-    "//third_party/crashpad/third_party/mini_chromium:base",
+    "//third_party/mini_chromium/base",
     "//third_party/crashpad/util",
     "//third_party/rapidjson",
   ]
@@ -304,7 +304,7 @@ source_set("tests") {
     "//third_party/crashpad/client",
     "//third_party/crashpad/compat",
     "//third_party/crashpad/snapshot",
-    "//third_party/crashpad/third_party/mini_chromium:base",
+    "//third_party/mini_chromium/base",
     "//third_party/crashpad/util",
   ]
 
