Only generate drivers for driver transport
Change-Id: I2f425c0d7883e2e436a1cd73dfa64a1c2166cf5e

--- a/tools/fidl/fidlc/testdata/BUILD.gn
+++ b/tools/fidl/fidlc/testdata/BUILD.gn
@@ -30,6 +30,7 @@ standalone_libraries = [
   "protocols.test.fidl",
   "request_flexible_envelope.test.fidl",
   "service.test.fidl",
+  "socket_protocol.test.fidl",
   "struct.test.fidl",
   "table.test.fidl",
   "union.test.fidl",
