--- a/tools/fidl/fidlgen_llcpp/BUILD.gn
+++ b/tools/fidl/fidlgen_llcpp/BUILD.gn
@@ -18,29 +18,12 @@ if (is_host) {
     ]
     sources = [
       "codegen/codegen.go",
-      "codegen/driver_method_client_impl.tmpl",
-      "codegen/driver_method_client_impl_async.tmpl",
-      "codegen/driver_method_client_impl_oneway.tmpl",
-      "codegen/driver_method_client_impl_sync.tmpl",
-      "codegen/driver_method_completer_base.tmpl",
-      "codegen/driver_method_response_context.tmpl",
-      "codegen/driver_method_result.tmpl",
-      "codegen/driver_method_unownedresult.tmpl",
-      "codegen/driver_protocol.tmpl",
-      "codegen/driver_protocol_caller.tmpl",
-      "codegen/driver_protocol_client_impl.tmpl",
-      "codegen/driver_protocol_details.tmpl",
-      "codegen/driver_protocol_dispatcher.tmpl",
-      "codegen/driver_protocol_event_handler.tmpl",
-      "codegen/driver_protocol_event_sender.tmpl",
-      "codegen/driver_protocol_interface.tmpl",
-      "codegen/driver_protocol_sync_client.tmpl",
-      "codegen/file_driver_messaging_header.tmpl",
-      "codegen/file_driver_messaging_source.tmpl",
       "codegen/file_header.tmpl",
       "codegen/file_markers.tmpl",
       "codegen/file_messaging_header.tmpl",
       "codegen/file_messaging_source.tmpl",
+      "codegen/file_socket_messaging_header.tmpl",
+      "codegen/file_socket_messaging_source.tmpl",
       "codegen/file_test_base.tmpl",
       "codegen/file_types_header.tmpl",
       "codegen/file_types_source.tmpl",
@@ -70,6 +53,23 @@ if (is_host) {
       "codegen/fragment_struct.tmpl",
       "codegen/fragment_table.tmpl",
       "codegen/fragment_union.tmpl",
+      "codegen/socket_method_client_impl.tmpl",
+      "codegen/socket_method_client_impl_async.tmpl",
+      "codegen/socket_method_client_impl_oneway.tmpl",
+      "codegen/socket_method_client_impl_sync.tmpl",
+      "codegen/socket_method_completer_base.tmpl",
+      "codegen/socket_method_response_context.tmpl",
+      "codegen/socket_method_result.tmpl",
+      "codegen/socket_method_unownedresult.tmpl",
+      "codegen/socket_protocol.tmpl",
+      "codegen/socket_protocol_caller.tmpl",
+      "codegen/socket_protocol_client_impl.tmpl",
+      "codegen/socket_protocol_details.tmpl",
+      "codegen/socket_protocol_dispatcher.tmpl",
+      "codegen/socket_protocol_event_handler.tmpl",
+      "codegen/socket_protocol_event_sender.tmpl",
+      "codegen/socket_protocol_interface.tmpl",
+      "codegen/socket_protocol_sync_client.tmpl",
       "main.go",
     ]
   }
