--- a/src/connectivity/wlan/drivers/wlanphy/BUILD.gn
+++ b/src/connectivity/wlan/drivers/wlanphy/BUILD.gn
@@ -69,7 +69,11 @@ fuchsia_system_package("wlanphy") {
 test("wlanphy_convert_unittest") {
   sources = wlanphy_sources + [ "tests/convert_unittest.cc" ]
 
-  deps = wlanphy_deps + [ "//src/lib/fxl/test:gtest_main" ]
+  deps = wlanphy_deps + [
+           "//src/lib/fxl/test:gtest_main",
+           "//third_party/googletest:gtest",
+           "//third_party/googletest:gmock",
+         ]
 
   configs +=
       [ "//src/connectivity/wlan/lib/mlme/cpp/tests:wlan_mlme_tests_config" ]
