--- a/src/experiences/tests/chrome/BUILD.gn
+++ b/src/experiences/tests/chrome/BUILD.gn
@@ -26,7 +26,16 @@ dart_test("workstation_chrome_smoke_test") {
     "//third_party/dart-pkg/pub/test",
   ]
 
-  environments = [ atlas_env ]
+  # TODO(fxbug.dev/92334): Switch back to [ atlas_env ] with no "e2e-fyi" tag
+  # after the test is fixed.
+  environments = [
+    {
+      dimensions = {
+        device_type = "Atlas"
+      }
+      tags = [ "e2e-fyi" ]
+    },
+  ]
 }
 
 dart_test("workstation_chrome_advanced_smoke_test") {
