--- a/src/lib/storage/fs_management/cpp/BUILD.gn
+++ b/src/lib/storage/fs_management/cpp/BUILD.gn
@@ -36,6 +36,7 @@ if (is_fuchsia) {
     ]
     deps = [
       "//sdk/fidl/fuchsia.boot:fuchsia.boot_llcpp",
+      "//sdk/fidl/fuchsia.device:fuchsia.device_llcpp",
       "//sdk/fidl/fuchsia.hardware.block:fuchsia.hardware.block_c",
       "//sdk/fidl/fuchsia.hardware.block:fuchsia.hardware.block_llcpp",
       "//sdk/fidl/fuchsia.hardware.block.partition:fuchsia.hardware.block.partition_c",
